// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectModel should return all projects 1`] = `
Array [
  Object {
    "description": "新しいフレッシュホームページの制作過程はこちら",
    "id": 1,
    "title": "ホームページのリニューアル",
  },
  Object {
    "description": "新しいチェックアウト フォームでユーザー エクスペリエンスを向上",
    "id": 2,
    "title": "チェックアウトフォームのリファクタリング",
  },
  Object {
    "description": null,
    "id": 3,
    "title": "実験プロジェクト",
  },
]
`;

exports[`ProjectModel should return project with id 1 1`] = `
Object {
  "description": "新しいフレッシュホームページの制作過程はこちら",
  "id": 1,
  "title": "ホームページのリニューアル",
}
`;
